fixed corousel and exploretopprgrm alignment

--- a/myproject/src/Home/Corousel.css
+++ b/myproject/src/Home/Corousel.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: 400px;
     left: 70px;
-    
+    width: 30vw;
     
     
     
