--- a/myproject/src/Home/Exploretopprgrm.css
+++ b/myproject/src/Home/Exploretopprgrm.css
@@ -1,19 +1,19 @@
 .maincard{
     height: 12vh;
     border-radius: 0px;
-    width: 20vw;
+    width: 250px;
     
 }
 .maincard img{
     height: 10vh;
-    width: 5vw;
+    width: 50px;
 }
 .exploretopprgrmmaindiv{
-    margin: 0 7vw;
+    margin: 0 8vw;
     margin-top: 6vh;
 }
 .subdiv{
-    width: 20vw;
+    width: 250px;
 }
 .exploretopprgrmmaindiv p{
     font-weight: bold;
